--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <!-- Mobile menu -->
       <ul class="nav navbar-nav visible-xs">
-        <li><a href="#" onclick="showSection('chicken')">Chicken</a></li>
-        <li><a href="#" onclick="showSection('beef')">Beef</a></li>
-        <li><a href="#" onclick="showSection('sushi')">Sushi</a></li>
+        <li><a href="#" onclick="showSection('chicken')" style="text-align: center;">Chicken</a></li>
+        <li><a href="#" onclick="showSection('beef')" style="text-align: center;">Beef</a></li>
+        <li><a href="#" onclick="showSection('sushi')" style="text-align: center;">Sushi</a></li>
       </ul>
 
       <!-- Desktop/Tablet menu -->
